--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,8 @@
                 font-size: 1.5rem;
                 background-color: transparent;
                 color: white;
-                border-box: 2px  white ;
+                
+                border: 2px  white ;
                 border-radius: 0.5rem;
             }
 
